fix: remove tap highlight color for improved touch interaction on mobile

--- a/src/component/Hero/Hero.module.css
+++ b/src/component/Hero/Hero.module.css
@@ -17,6 +17,7 @@
       display: flex;
       gap: 25px;
       justify-content: center;
+      -webkit-tap-highlight-color: transparent;
   
       a {
         margin: 0;
@@ -30,6 +31,7 @@
     a {
       width: fit-content;
       align-self: center;
+      -webkit-tap-highlight-color: transparent;
     }
   
     button {
@@ -63,6 +65,7 @@
     position: absolute;
     right: 10;
     width: 25px;
+    -webkit-tap-highlight-color: transparent;
   }
   
   .colorMode:hover {
