--- a/src/component/Projects/Projects.module.css
+++ b/src/component/Projects/Projects.module.css
@@ -15,6 +15,7 @@
     text-decoration: none;
     color: #222;
     transition: transform 200ms ease-in-out;
+    -webkit-tap-highlight-color: transparent;
   }
 
   a:hover {
